--- a/LESS/main.less
+++ b/LESS/main.less
@@ -9,18 +9,28 @@
 
         .salt-shaker{
             margin: auto;
+
+            img{
+                width: 30rem;
+            }
         }
         .search{
             display: flex;
             margin: 0rem auto 2rem auto;
             
             .salt-search{
-                width: 20rem;
-                border-radius: 15px;
+                width: 25rem;
+                border-radius: 30px;
+                font-size: 1.1rem;
                 border: 1px solid @secondary-color;
-                padding: 0 2rem;
-                height: 2rem;
+                padding: 0 4rem;
+                height: 3rem;
+            }
 
+            img{
+                position: absolute;
+                width: 3.5rem;
+                margin-left: 0.5rem;                
             }
         }
     }
