--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -1,7 +1,13 @@
+@font-face{
+    font-family: 'gotFont';
+    src: url('../Media/phenix-american.woff') format('woff')
+}
+
 header {
     background-color: @main-color;
     display: flex;
-    width: 90%;
+    justify-content: start;
+    width: 100%;
     border-bottom: dashed #2c3236 2px;
     .logo{
         display: flex;
@@ -9,27 +15,35 @@ header {
         h1{
             color: white;
             //font-family: Arial, Helvetica, sans-serif;
-            font-family: 'phenix-american';
+            font-family: 'gotFont';
+            font-size: 3rem;
+            height: 1rem;
+            margin: 0.4rem;
+            letter-spacing: 0.2rem;
+
 
         }
 
         a {
-            width: 10%;
+            width: 3.5rem;
             img{
                 width: 100%;
-                min-width: 50px;
             }
         }
     }
     
     nav{
         display: flex;
-        align-content: flex-end;
+        width: 30%;
+        margin-top: 2rem;
 
         a{
-            margin: 0 10%;
+            margin: 0 5%;
             text-decoration: none;
             color: white;
+            font-size: 1.2rem;
+            height: 2rem;
+            font-family: Oswald;
         }
     }
 }
