--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -9,6 +9,10 @@ header {
     justify-content: start;
     width: 100%;
     border-bottom: dashed #2c3236 2px;
+
+    @media@mobile {
+        flex-direction: column;
+    }
     .logo{
         display: flex;
 
@@ -16,12 +20,11 @@ header {
             color: white;
             //font-family: Arial, Helvetica, sans-serif;
             font-family: 'gotFont';
-            font-size: 3rem;
-            height: 1rem;
+            font-size: 3.3rem;
+            height: 0.1rem;
             margin: 0.4rem;
-            letter-spacing: 0.2rem;
-
-
+            letter-spacing: 0.5rem;
+            min-width: 12rem;
         }
 
         a {
@@ -29,21 +32,39 @@ header {
             img{
                 width: 100%;
             }
+
         }
     }
     
     nav{
         display: flex;
-        width: 30%;
+        justify-content: space-between;        
         margin-top: 2rem;
 
+        @media@mobile{
+            justify-content: center;
+            margin: auto;
+            width: 95%;
+        }
         a{
-            margin: 0 5%;
+            width: 50%;
+            padding: 0 1.5rem;
+            height: 2rem;
             text-decoration: none;
             color: white;
             font-size: 1.2rem;
             height: 2rem;
             font-family: Oswald;
+
+            @media@mobile{
+                padding: none;
+                width: 20%;
+                height: auto;
+            }
+        }
+
+        a:hover{
+            background-color: @secondary-color;
         }
     }
 }
