--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -48,7 +48,7 @@ header {
         }
         a{
             width: 50%;
-            padding: 0 1.5rem;
+            padding: 0.5rem 1.5rem 0 1.5rem;
             height: 2rem;
             text-decoration: none;
             color: white;
