--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -90,7 +90,7 @@ ul {
     justify-content: space-between;
     margin: 5% 0;
     border: 1px solid black;
-    padding: 2%;
+    padding: 1% 2%;
     box-shadow: 1px 1px 6px #444;
 }
 
@@ -105,9 +105,11 @@ ul {
 }
 
 .salt-rating {
+    max-width: 70px;
     width: 25%;
     border: 1px solid black;
     border-radius: 7px;
     padding: 1%;
-    background: #ccc;
+    background: #ddd;
+    text-align: center;
 }
