added .gif to project files

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -10,7 +10,7 @@
 
 body {
     font-family: 'Share Tech Mono', monospace;
-    background-image: url(https://steamuserimages-a.akamaihd.net/ugc/929299366847264857/2BA4A88A8BAE058D21FB89C0BD5DA71FBECEE16D/);
+    background-image: url(/hacker.gif);
     color: #adff2f;
 }
 
