--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -25,7 +25,7 @@ body {
     height: 40px;
     margin: 0;
     padding: 1%;
-    background: #068f06;
+    background: #006400;
     color: #fff;
     z-index: 5;
 }
@@ -165,7 +165,7 @@ ul {
     border-radius: 7px;
     padding: 1% 2%;
     color: #fff;
-    background: #068f06;
+    background: #006400;
     text-decoration: none;
     font-size: 1.2rem;
 }
